version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/CDB/NCommand.rst.txt
.. vale off



:class:`NCommand`
=================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.CDB.NCommand(iNCommand: Ansys.Common.Interop.FEParsePlugin_ANSYS.INCommand)

   Bases: :py:obj:`object`


   
   Represents a N command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: NCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~Node`
            - Gets the node number.
          * - :py:attr:`~Type`
            - Gets the type of the data to be defined.
          * - :py:attr:`~Values`
            - Gets the values.







Property detail
---------------
.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Node
   :type: Optional[int]


   
   Gets the node number.
















   ..
       !! processed by numpydoc !!

.. py:property:: Type
   :type: Optional[str]


   
   Gets the type of the data to be defined.
















   ..
       !! processed by numpydoc !!

.. py:property:: Values
   :type: Optional[tuple[float]]


   
   Gets the values.
















   ..
       !! processed by numpydoc !!







.. vale on