version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/FE/CDB/NCommand.rst.txt
.. vale off



:class:`NCommand`
=================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.FE.CDB.NCommand(iNCommand: Ansys.Common.Interop.FEParsePlugin_ANSYS.INCommand)

   Bases: :py:obj:`object`


   
   Represents a N command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: NCommand

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~FullName`
            - FullName property.
          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~Node`
            - Gets the node number.
          * - :py:attr:`~ToCdbCommandString`
            - Gets the command text formatted as a CDB file entry.
          * - :py:attr:`~Type`
            - Gets the type of the data to be defined.
          * - :py:attr:`~Values`
            - Gets the values.







Property detail
---------------
.. py:property:: FullName
   :type: Optional[str]


   
   FullName property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Node
   :type: Optional[int]


   
   Gets the node number.
















   ..
       !! processed by numpydoc !!

.. py:property:: ToCdbCommandString
   :type: Optional[Ansys.ACT.Automation.Mechanical.FE.CDB.CdbCommandFormatAndParameter]


   
   Gets the command text formatted as a CDB file entry.
   Gets the command parameters formatted as a string.
















   ..
       !! processed by numpydoc !!

.. py:property:: Type
   :type: Optional[str]


   
   Gets the type of the data to be defined.
















   ..
       !! processed by numpydoc !!

.. py:property:: Values
   :type: Optional[tuple[float]]


   
   Gets the values.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on